RESOLVED FIXED56280
REGRESSION (r80438): fast/text/hyphenate-character failing in pixel mode
https://bugs.webkit.org/show_bug.cgi?id=56280
Summary REGRESSION (r80438): fast/text/hyphenate-character failing in pixel mode
mitz
Reported 2011-03-13 17:47:52 PDT
REGRESSION (r80438): fast/text/hyphenate-character failing in pixel mode
Attachments
Avoid subtracting 1 from an unsigned 0 (1.53 KB, patch)
2011-03-13 17:52 PDT, mitz
mrowe: review+
mitz
Comment 1 2011-03-13 17:52:09 PDT
Created attachment 85630 [details] Avoid subtracting 1 from an unsigned 0
mitz
Comment 3 2011-03-13 19:12:47 PDT
Ugh, somehow this broke fast/text/hyphenation-limit-before-after.html
mitz
Comment 4 2011-03-13 19:36:28 PDT
s/broke/fixed/
Note You need to log in before you can comment on or make changes to this bug.