REGRESSION (r80438): fast/text/hyphenate-character failing in pixel mode https://bugs.webkit.org/show_bug.cgi?id=56280

Reviewed by Mark Rowe.

* rendering/RenderBlockLineLayout.cpp:
(WebCore::tryHyphenating): Avoid subtracting 1 from an unsigned 0.



Canonical link: https://commits.webkit.org/70867@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@80982 268f45cc-cd09-0410-ab3c-d52691b4dbfc